[workspace]
members = ["commons", "dlmm_interface"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
anchor-client = "0.31.1"

solana-program = "^2.1.0"
solana-program-test = "^2.1.0"

solana-sdk = "^2.0"
spl-associated-token-account = "1"
solana-transaction-status = "1.17.0"
solana-account-decoder = "1.17.0"
spl-memo = "3.0.0"
spl-transfer-hook-interface = "0.9.0"

serde_json = "1.0.48"
serde = "1.0.104"
bincode = "1.3.3"
bs58 = "0.5.0"


bytemuck = "1.13.1"

rust_decimal = "1.31.0"
ruint = "1.3.0"
num-integer = "0.1.45"
num-traits = "0.2.16"


tokio = "^1.0"

async-trait = "0.1.0"

anyhow = "1.0.71"


commons = { path = "./commons" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
